--- a/src/FirstScreen/FirstScreen.scss
+++ b/src/FirstScreen/FirstScreen.scss
@@ -10,11 +10,22 @@
   padding-left: 20px;
   position: relative;
   overflow: hidden;
+  @media (max-width: 845px) {
+    height: 360px;
+    padding-left: 14px;
+  }
   img {
     &:nth-child(1) {
       z-index: 3;
       margin-top: 84px;
       margin-bottom: 14px;
+      @media (max-width: 845px) {
+        margin-top: 64px;
+        max-width: 200px;
+      }
+      @media (max-width: 500px) {
+        margin-top: 20px;
+      }
     }
     &:nth-last-child(1),
     &:nth-last-child(2),
@@ -22,20 +33,30 @@
       position: absolute;
       width: 100%;
       max-width: 214px;
+      @media (max-width: 845px) {
+        max-width: 120px;
+      }
     }
     &:nth-last-child(1) {
-      right: 0;
-      bottom: 0;
+      right: -2px;
+      bottom: -2px;
+
     }
     &:nth-last-child(2) {
       right: 190px;
       bottom: -24px;
       z-index: 1;
+      @media (max-width: 845px) {
+        right: 90px;
+      }
     }
     &:nth-last-child(3) {
       right: 380px;
       bottom: -48px;
       z-index: 2;
+      @media (max-width: 845px) {
+        right: 190px;
+      }
     }
   }
   h2 {
@@ -44,5 +65,9 @@
     letter-spacing: -0.005em;
     color: white;
     max-width: 437px;
+    @media (max-width: 845px) {
+      font-size: 24px;
+      max-width: 320px;
+    }
   }
 }
